# Netlist-Simulator

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  ExitCodes  NetlistGrammar.tex  README.md  Summary.tex  grammar.sty  version.cpp
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml  cmake-ubuntu.yml  cmake-windows.yml
ASM/: ast.ml  writter.ml
cmake/: GetGitRevisionDescription.cmake
doc/: Doxyfile  header.html
doc/html/: For-example.html  _2mnt_2c_2Users_2gruni_2CLionProjects_2netlist_2src_2dependency_graph_8hpp-example.html  annotated.html  annotated_dup.js  classBuilderCodeGenerator-members.html  classBuilderCodeGenerator.html  classBuilderCodeGenerator.js  classDependencyGraph-members.html  classDependencyGraph.html  classDependencyGraph.js  classDependencyGraph__coll__graph.md5  classDisassembler-members.html  classDisassembler.html  classDisassembler.js  classHasCycle.html  classHasCycle__coll__graph.md5  classHasCycle__inherit__graph.md5  classInterpreterBackend-members.html  classInterpreterBackend.html  classInterpreterBackend.js  classInterpreterBackend__coll__graph.md5  classInterpreterBackend__inherit__graph.md5  classKeywordHashTable-members.html  classKeywordHashTable.html  classKeywordHashTable.js  classLexer-members.html  classLexer.html  classLexer.js  classLineMap-members.html  classLineMap.html  classLineMap.js  classLineMap__coll__graph.md5  classParser-members.html  classParser.html  classParser.js  classParser__coll__graph.md5  classProgramBuilder-members.html  classProgramBuilder.html  classProgramBuilder.js  classProgramBuilder__coll__graph.md5  (+316 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  (+48 more)
netfiles/: test_1.net
src/: .test_graph.cpp.swp  bump_allocator.hpp  bytecode.cpp  bytecode.hpp  command_line_parser.cpp  command_line_parser.hpp  dependency_graph.cpp  dependency_graph.hpp  diagnostic_context.cpp  diagnostic_context.hpp  disassembler.cpp  disassembler.hpp  dot_printer.cpp  dot_printer.hpp  graph.cpp  graph.hpp  identifier_table.cpp  identifier_table.hpp  input_manager.cpp  input_manager.hpp  instruction.cpp  instruction.hpp  keywords.def  keywords.hpp  lexer.cpp  lexer.hpp  line_map.cpp  line_map.hpp  main.cpp  parser.cpp  parser.hpp  program.cpp  program.hpp  program_printer.cpp  program_printer.hpp  report.cpp  report.hpp  scheduler.cpp  scheduler.h  scheduler.hpp  (+7 more)
src/driver/: command_line_parser.cpp  command_line_parser.hpp  main.cpp  version.cpp.in  version.hpp
src/simulator/: interpreter_backend.cpp  interpreter_backend.hpp  simulator.cpp  simulator.hpp
test/: CMakeLists.txt
test/negative/: CMakeLists.txt  RunTest.cmake  constant_in_reg.net  cycle.net  extra_comma_input_list.net  extra_comma_output_list.net  extra_comma_var_list.net  indirect_cycle.net  invalid_bus_size_constant.net  invalid_bus_size_register.net  missing_digit_after_radix_prefix.net  missing_in.net  missing_input.net  missing_input_in_var_list.net  missing_output.net  missing_output_in_var_list.net  missing_size_specifier_decimal_constant.net  missing_var.net  multiple_same_inputs.net  multiple_same_outputs.net  multiple_same_variables.net  nul_bus_size.net  too_big_bus_size.net  var_as_input_and_output.net
test/positive/: CMakeLists.txt  RunTest.cmake  and.net  binary_constants.net  comments.net  decimal_constants.net  empty_equation_list.net  empty_input_list.net  hexadecimal_constants.net  identifiers.net  mux.net  nand.net  nor.net  not.net  or.net  reg.net  select.net  slice.net  xnor.net  xor.net
unittest/: CMakeLists.txt  bytecode_writer_test.cpp  dependency_graph_test.cpp  disassembler_test.cpp  graph_test.cpp  identifier_table_test.cpp  lexer_test.cpp  line_map_test.cpp  netlist_test[1]_include.cmake  parser_test.cpp  report_test.cpp  simulator_test.cpp
